# sky_pro_kurs_2

./: .gitignore  pyproject.toml
kurs_rabota_2/: basic_word.py  main.py  players.py  utils.py
lesson_1/: README.md
lesson_1/1_start/: task_1.py  task_2.py  task_3.py
lesson_1/dz_lesson_1/: main.py
lesson_2/: README.md
lesson_2/1_set/: task_1.py
lesson_2/2_list_dict/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py
lesson_3/: README.md
lesson_3/1_collection/: task_1.py  task_1_1.py  task_2.py  task_2_1.py  task_3.py  task_3_1.py
lesson_3/2_dz_collection/: utils.py
lesson_3/2_dz_collection/data/: professions.json  students.json
lesson_4/: README.md
lesson_4/1_class/: task_1.py  task_2.py  task_3.py  task_4.py
lesson_4/2_init/: tasK_3.py  task_1.py  task_2.py  task_4.py
lesson_4/3_OOP/: task_1.py  task_10.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
lesson_4/4_OOP/: task_1.py  task_2.py  task_3.py  task_4.py
lesson_4/5_dz_oop/: data.json  main.py  utils.py
